feat. CORS 관련 쿠키 설정 및 유저 검증 관련 ID 추가